# pyproject-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_venv.sh  setup.cfg  setup_ubuntu.sh
