[metadata]
name = package_name
description = Default files and configuration for starting a new project in Ubuntu.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucasmtz/pyproject-template.git
author = Lucas Moreira Guimarães
author_email = lucasmtz@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    coverage
    flake8
    ipykernel
    pre-commit
    pytest

[versioneer]
vcs = git
style = pep440
versionfile_source = package_name/_version.py
versionfile_build = package_name/_version.py
tag_prefix = v
parentdir_prefix = package_name-

[coverage:run]
branch = True
omit =
    */tests/*
    package_name/_typing.py
    package_name/_version.py
source = package_name

[coverage:report]
ignore_errors = False
show_missing = True
omit =
    package_name/_version.py
exclude_lines =
    pragma: no cover
    def __repr__
    if self\.debug
    raise AssertionError
    raise NotImplementedError
    AbstractMethodError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:

[coverage:html]
directory = coverage_html_report
